--- a/setup/man/en/gpui.1
+++ b/setup/man/en/gpui.1
@@ -2,11 +2,11 @@
 .\" Contact august@altlinux.org to correct errors or typos.
 .TH man 1 "16 Mar 2022" "0.2.0" "gpui man page"
 .SH NAME
-gpui \- manage group policy templates
+gpui-main \- manage group policy templates
 .SH SYNOPSIS
-gpui [-p policy path] [-b admx path] [-h | --help] [-v | --version]
+gpui-main [-p policy path] [-b admx path] [-h | --help] [-v | --version]
 .SH DESCRIPTION
-gpui is a program for managing group policy templates. 
+gpui-main is a program for managing group policy templates.
 .SH OPTIONS
 .TP 
 .if  !'po4a'hide' .BR \-p
