--- a/setup/man/ru/gpui.1
+++ b/setup/man/ru/gpui.1
@@ -2,11 +2,11 @@
 .\" Contact august@altlinux.org to correct errors or typos.
 .TH man 1 "16 Mar 2022" "0.2.0" "gpui man page"
 .SH NAME
-gpui \- редактирует шаблоны групповых политик
+gpui-main \- редактирует шаблоны групповых политик
 .SH SYNOPSIS
-gpui [-p путь к политике] [-b путь к admx файлам] [-h | --help] [-v | --version]
+gpui-main [-p путь к политике] [-b путь к admx файлам] [-h | --help] [-v | --version]
 .SH DESCRIPTION
-gpui  
+gpui-main это программа для управления шаблонами групповой политики.
 .SH OPTIONS
 .TP 
 .if  !'po4a'hide' .BR \-p
