--- a/setup/man/ru/gpui.1
+++ b/setup/man/ru/gpui.1
@@ -4,7 +4,7 @@
 .SH NAME
 gpui-main \- редактирует шаблоны групповых политик
 .SH SYNOPSIS
-gpui-main [-p путь к политике] [-b путь к admx файлам] [-h | --help] [-v | --version]
+gpui-main [-p путь к политике] [-b путь к admx файлам] [-n имя политики для отображения] [-h | --help] [-v | --version]
 .SH DESCRIPTION
 gpui-main это программа для управления шаблонами групповой политики.
 .SH OPTIONS
@@ -14,6 +14,9 @@ gpui-main это программа для управления шаблонам
 .TP 
 .if  !'po4a'hide' .BR \-b 
 Позволяет указать путь для загрузки admx файлов.
+.TP
+.if  !'po4a'hide' .BR \-n
+Параметр для использования совместно с ADMC, позволяет ADMC передать имя GPO для отображения.
 .TP 
 .if  !'po4a'hide' .BR \-h ", " \-\-help
 Показать справочное сообщение и закончить работу.
