!chore: refactor -n command line option

--- a/setup/man/ru/gpui.1
+++ b/setup/man/ru/gpui.1
@@ -16,7 +16,7 @@ gpui-main это программа для управления шаблонам
 Позволяет указать путь для загрузки admx файлов.
 .TP
 .if  !'po4a'hide' .BR \-n
-Параметр для использования совместно с ADMC, позволяет ADMC передать имя GPO для отображения.
+Параметр оставлен для обеспечения обраной совместимости с ADMC. Он никак не влияет на работу приложения.
 .TP
 .if  !'po4a'hide' .BR \-h ", " \-\-help
 Показать справочное сообщение и закончить работу.
