--- a/setup/man/en/gpui.1
+++ b/setup/man/en/gpui.1
@@ -16,8 +16,7 @@ Provide the full path of the policy to edit.
 Provide the path of admx files to load.
 .TP
 .if  !'po4a'hide' .BR \-n
-The parameter to be used in conjunction with ADMC, allows ADMC to pass the name of the GPO which will be used in
-a window title.
+Parameters provides compatibilty with ADMC, currently it performs no specific function.
 .TP
 .if  !'po4a'hide' .BR \-h ", " \-\-help
 Show help message and exit program.
